--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   },
   "homepage": "https://github.com/ImADrafter/choropleth-map#readme",
   "devDependencies": {
-    "eslint": "6.7.2",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-plugin-import": "2.18.2"
+    "budgerigar": "^0.3.0"
   },
   "dependencies": {
     "axios": "0.19.0",
