--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "choropleth-map",
   "version": "1.0.0",
   "description": "My attempt to fulfill the D3 fourth challenge.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "webpack",
     "lint": "eslint --fix src/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,10 +19,13 @@
   },
   "homepage": "https://github.com/ImADrafter/choropleth-map#readme",
   "devDependencies": {
-    "budgerigar": "^0.3.0"
+    "budgerigar": "^0.3.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "axios": "0.19.0",
-    "d3": "5.9.7"
+    "d3": "5.9.7",
+    "topojson": "^3.0.2"
   }
 }
